--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width">
 
     <!-- syntax highlighting CSS -->
-    <link rel="stylesheet" href="/css/syntax.css">
+    <link rel="stylesheet" href="{{ site.base_url }}/css/syntax.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/bootstrap-theme.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="{{ site.base_url }}/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ site.base_url }}/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="{{ site.base_url }}/css/main.css">
 
     <script type="text/javascript" src="//use.typekit.net/cej7ijo.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-default" role="navigation">
       <div class="container">
         <div class="col-md-12">
-          <img class="logo" src="/images/logo.png" />
+          <img class="logo" src="{{ site.base_url }}/images/logo.png" />
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="/about/">About</a></li>
