--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,23 +24,55 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="/about/">About</a></li>
+            <li><a href="/apply/" class="btn btn-primary btn-lg yellow">APPLY</a></li>
           </ul>
         </div>
       </div>
     </nav>
     <div class="main">
       {{ content }}
-
       <div class="footer">
-        <div class="contact">
-        </div>
-        <div class="contact">
-          <p>
-            <a href="https://github.com/yourusername">github.com/yo11urusername</a><br />
-            <a href="https://twitter.com/yourusername">twitter.com/1</a><br />
-          </p>
+        <div class="container">
+          <div class="col-md-4">
+            <h3>SCHMIEDE</h3>
+            <ul>
+              <li>
+                <a href="https://www.facebook.com/schmiedehallein">Facebook page</a>
+              </li>
+              <li>
+                <a href="http://www.flickr.com/groups/schmiede/">Flickr group</a>
+              </li>
+              <li>
+                <a href="https://twitter.com/SchmiedeHallein/">Twitter</a>
+              </li>
+              <li>
+                <a href="/partners/">Partners</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="col-md-4">
+            <h3>GET INVOLVED</h3>
+            <ul>
+              <li>
+                <a href="">Apply</a>
+              </li>
+              <li>
+                <a href="">Apply</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <h3>OTHER</h3>
+            <ul>
+              <li>
+                <a href="">Impressum/Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
+    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
   </body>
 </html>
