--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,8 @@ h1, h2, h3, h4, h5, h6 {
   color: #FFF;
   position: relative;
   text-shadow: 0px 0px 12px #000000;
+  min-height: 530px;
+  padding: 150px 40px 0;
 }
 
 
@@ -61,16 +63,12 @@ h1, h2, h3, h4, h5, h6 {
 
 .claim {
   background-color: #333;
-  height: 530px;
   background-image: url(http://philippwassibauer.github.io/schmiede_web/images/main_image.jpg);
-  padding: 150px 40px 0;
 }
 
 .location {
   background-color: #333;
-  height: 530px;
   background-image: url(http://philippwassibauer.github.io/schmiede_web/images/location.jpg);
-  padding: 150px 40px 0;
 }
 
 .claim h1 {
