--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <div class="col-md-12">
           <img class="logo" src="{{ site.base_url }}/images/logo.png" />
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/about/">About</a></li>
             <li><a href="/apply/" class="btn btn-primary btn-lg yellow">APPLY</a></li>
           </ul>
@@ -46,7 +46,7 @@
                 <a href="https://twitter.com/SchmiedeHallein/">Twitter</a>
               </li>
               <li>
-                <a href="/partners/">Partners</a>
+                <a href="/partners.html">Partners</a>
               </li>
             </ul>
           </div>
@@ -66,7 +66,10 @@
             <h3>OTHER</h3>
             <ul>
               <li>
-                <a href="">Impressum/Contact</a>
+                <a href="{{ site.base_url }}/impressum.html">Impressum/Contact</a>
+              </li>
+              <li>
+                <a href="{{ site.base_url }}/tos.html">Therms of service</a>
               </li>
             </ul>
           </div>
