--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-default" role="navigation">
       <div class="container">
         <div class="col-md-12">
-          <img class="logo" src="{{ site.base_url }}/images/logo.png" />
+          <a href="{{ site.base_url }}/"><img class="logo" src="{{ site.base_url }}/images/logo.png" /></a>
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             <li><a href="/about/">About</a></li>
