--- a/css/main.css
+++ b/css/main.css
@@ -132,3 +132,62 @@ h1, h2, h3, h4, h5, h6 {
 .content-area {
   margin: 40px 0 0 10px;
 }
+
+
+.testimonials {
+}
+
+.testimonial {
+  position: relative;
+  list-style: none;
+  margin: 10px auto;
+}
+
+.testimonial .circular {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+}
+
+.testimonial .content {
+  margin: 15px 0 15px 170px;
+  position: relative;
+}
+
+.testimonial .content p {
+  font-size: 28px;
+  line-height: 35px;
+  text-align: left;
+  margin: 0 0 15px 0;
+  color: #999;
+}
+
+.testimonial .content .quotes {
+  font-size: 46px;
+  position: relative;
+}
+
+.testimonial .content .quotes-left {
+  left: -20px;
+  position: absolute;
+}
+
+.testimonial .content .quotes-right {
+  right: 0px;
+  line-height: 24px;
+  top: 6px;
+}
+
+.testimonial .content span {
+  font-size: 16px;
+}
+
+.circular {
+  float: left;
+  width: 150px;
+  height: 150px;
+  margin: 25px 20px 25px 0px;
+  -webkit-border-radius: 75px;
+  -moz-border-radius: 75px;
+  border-radius: 75px;
+}
