--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,8 @@
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             <li><a href="/about/">About</a></li>
+            <li><a href="/location/">Location</a></li>
+            <li><a href="/medienkunstpreis/">Medienkunstpreis</a></li>
             <li><a href="/apply/" class="btn btn-primary btn-lg yellow">APPLY</a></li>
           </ul>
         </div>
@@ -55,14 +57,15 @@
             <h3>GET INVOLVED</h3>
             <ul>
               <li>
-                <a href="">Apply</a>
+                <a href="/apply/">Apply</a>
               </li>
               <li>
-                <a href="">Apply</a>
+                <a href="/medienkunstpreis/">Medienkunstpreis</a>
               </li>
             </ul>
           </div>
           <div class="col-md-4">
+            <!--<img src="{{ site.base_url }}/images/anvil.png" />-->
             <h3>OTHER</h3>
             <ul>
               <li>
