--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,11 @@ h1, h2, h3, h4, h5, h6 {
   margin: 7px 0 0 0;
 }
 
+
+.testimonial .content {
+  margin: 15px 0 30px 170px;
+}
+
 .main {
   /*margin-top: 80px;*/
 }
@@ -26,7 +31,7 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
   text-shadow: 0px 0px 12px #000000;
   min-height: 530px;
-  padding: 150px 40px 0;
+  padding: 150px 40px 1px;
 }
 
 
@@ -97,7 +102,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .yellow.btn-primary:hover {
-  background-color: #E2D31D;
+  background-color: #E2D31D !important;
 }
 
 .navbar-default .navbar-nav>li>a.yellow.btn {
@@ -130,7 +135,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .content-area {
-  margin: 40px 0 0 10px;
+  margin-top: 40px;
 }
 
 
@@ -150,7 +155,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .testimonial .content {
-  margin: 15px 0 15px 170px;
+  margin: 15px 0 px 170px;
   position: relative;
 }
 
@@ -190,4 +195,13 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-border-radius: 75px;
   -moz-border-radius: 75px;
   border-radius: 75px;
+}
+
+.tile-section img{
+  margin-bottom: 30px;
+}
+
+#schmiede-apply-form {
+  border: 1px solid #ccc;
+  overflow: hidden;
 }
