--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,10 +23,10 @@
           <a href="{{ site.base_url }}/"><img class="logo" src="{{ site.base_url }}/images/logo.png" /></a>
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
-            <li><a href="/about/">About</a></li>
-            <li><a href="/location/">Location</a></li>
-            <li><a href="/medienkunstpreis/">Medienkunstpreis</a></li>
-            <li><a href="/apply/" class="btn btn-primary btn-lg yellow">APPLY</a></li>
+            <li><a href="{{ site.base_url }}/about/">About</a></li>
+            <li><a href="{{ site.base_url }}/location/">Location</a></li>
+            <li><a href="{{ site.base_url }}/medienkunstpreis/">Medienkunstpreis</a></li>
+            <li><a href="{{ site.base_url }}/apply/" class="btn btn-primary btn-lg yellow">APPLY</a></li>
           </ul>
         </div>
       </div>
