--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
           <a href="{{ site.base_url }}/"><img class="logo" src="{{ site.base_url }}/images/logo.png" /></a>
           <ul class="nav navbar-nav">
             <li><a href="{{ site.base_url }}/">Home</a></li>
+            <li><a href="http://schmiede.tumblr.com/" target="_BLANK">Blog</a></li>
             <li><a href="{{ site.base_url }}/location/">Location</a></li>
             <li><a href="{{ site.base_url }}/medienkunstpreis/">Medienkunstpreis</a></li>
             <li><a href="{{ site.base_url }}/apply/" class="btn btn-primary btn-lg yellow">APPLY</a></li>
