--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,11 +22,13 @@
         <div class="col-md-12">
           <a href="{{ site.base_url }}/"><img class="logo" src="{{ site.base_url }}/images/logo.png" /></a>
           <ul class="nav navbar-nav">
-            <li><a href="{{ site.base_url }}/">Home</a></li>
+            <li><a href="{{ site.base_url }}/home.html"></a></li>
             <li><a href="http://schmiede.tumblr.com/" target="_BLANK">Blog</a></li>
             <li><a href="{{ site.base_url }}/location/">Location</a></li>
             <li><a href="{{ site.base_url }}/medienkunstpreis/">Medienkunstpreis</a></li>
-            <li><a href="{{ site.base_url }}/apply/" class="btn btn-primary btn-lg yellow">APPLY</a></li>
+            <li><a href="{{ site.base_url }}/" class="btn btn-primary btn-lg yellow" style="font-weight: normal;">SCHMIEDE<b>2014</b></a></li>
+
+            <!--<li><a href="{{ site.base_url }}/apply/" class="btn btn-primary btn-lg yellow">APPLY</a></li>-->
           </ul>
         </div>
       </div>
@@ -46,6 +48,12 @@
               </li>
               <li>
                 <a href="https://twitter.com/SchmiedeHallein/">Twitter</a>
+              </li>
+              <li>
+                <a href="https://soundcloud.com/groups/schmiede">Soundcloud</a>
+              </li>
+              <li>
+                <a href="https://vimeo.com/groups/110342">Vimeo</a>
               </li>
               <li>
                 <a href="/partners.html">Partners</a>
