--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <div class="col-md-12">
           <a href="{{ site.base_url }}/"><img class="logo" src="{{ site.base_url }}/images/logo.png" /></a>
           <ul class="nav navbar-nav">
-            <li><a href="{{ site.base_url }}/home.html"></a></li>
+            <li><a href="{{ site.base_url }}/home.html">About</a></li>
             <li><a href="http://schmiede.tumblr.com/" target="_BLANK">Blog</a></li>
             <li><a href="{{ site.base_url }}/location/">Location</a></li>
             <li><a href="{{ site.base_url }}/medienkunstpreis/">Medienkunstpreis</a></li>
