--- a/css/main.css
+++ b/css/main.css
@@ -230,7 +230,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .central-year-block {
-  padding-left: 1px;
+  margin-left: 1px;
   margin-top: -2px;
   background-color: #EFEFEF;
   margin-bottom: 90px;
@@ -240,7 +240,6 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
   font-size: 30px;
   margin-top: 0px;
-  border: 1px #EFEFEF solid;
   padding-top: 15px;
 }
 
