--- a/css/main.css
+++ b/css/main.css
@@ -234,6 +234,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: -2px;
   background-color: #EFEFEF;
   margin-bottom: 90px;
+  width: 1065px;
 }
 
 .central-year-block div{
