--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,9 +26,8 @@
             <li><a href="http://schmiede.tumblr.com/" target="_BLANK">Blog</a></li>
             <li><a href="{{ site.base_url }}/location/">Location</a></li>
             <li><a href="{{ site.base_url }}/medienkunstpreis/">Medienkunstpreis</a></li>
-            <li><a href="{{ site.base_url }}/2014.html" class="btn btn-primary btn-lg yellow" style="font-weight: normal;">SCHMIEDE<b>14</b></a></li>
-
-            <!--<li><a href="{{ site.base_url }}/apply/" class="btn btn-primary btn-lg yellow">APPLY</a></li>-->
+            <!--<li><a href="{{ site.base_url }}/2015.html" class="btn btn-primary btn-lg yellow" style="font-weight: normal;">SCHMIEDE<b>15</b></a></li> -->
+            <li><a href="{{ site.base_url }}/apply/" class="btn btn-primary btn-lg yellow">APPLY</a></li>
           </ul>
         </div>
       </div>
