--- a/css/main.css
+++ b/css/main.css
@@ -214,6 +214,8 @@ h1, h2, h3, h4, h5, h6 {
 #schmiede-apply-form {
   border: 1px solid #ccc;
   overflow: hidden;
+  width: 786px;
+  padding: 0px;
 }
 
 .application .dl-horizontal dd {
