--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
             <li><a href="http://schmiede.tumblr.com/" target="_BLANK">Blog</a></li>
             <li><a href="{{ site.base_url }}/location/">Location</a></li>
             <li><a href="{{ site.base_url }}/medienkunstpreis/">Medienkunstpreis</a></li>
-            <li><a href="{{ site.base_url }}/2016.html" class="btn btn-primary btn-lg yellow" style="font-weight: normal;">PROGRAM<b>16</b></a></li> 
+            <li><a href="https://issuu.com/schmiede/docs/schmiede16_programm" class="btn btn-primary btn-lg yellow" style="font-weight: normal;">PROGRAM<b>16</b></a></li> 
           </ul>
         </div>
       </div>
