--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{{ page.title }}</title>
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- syntax highlighting CSS -->
     <link rel="stylesheet" href="{{ site.base_url }}/css/syntax.css">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="{{ site.base_url }}/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ site.base_url }}/css/bootstrap-theme.css">
     <link rel="stylesheet" href="{{ site.base_url }}/css/main.css">
-
+    
     <script type="text/javascript" src="//use.typekit.net/cej7ijo.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
