--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,9 @@ body {
   font: 16px "brandon-grotesque", sans-serif;
 }
 
+
+
+
 h1, h2, h3, h4, h5, h6 {
   font-family: "brandon-grotesque", sans-serif;
   font-weight: 900;
@@ -89,6 +92,10 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 1px;
   font-size: 60px;
   font-weight: 900;
+
+  @media (min-width: @screen-sm-min) {
+    font-size: 20px;
+  }
 }
 
 .claim h2 {
