--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="{{ site.base_url }}/css/bootstrap-theme.css">
     <link rel="stylesheet" href="{{ site.base_url }}/css/main.css">
     
+    <link rel="stylesheet" media="(max-width: 600px)" href="{{ site.base_url }}/css/mobile.css" />
+
     <script type="text/javascript" src="//use.typekit.net/cej7ijo.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
