--- a/css/main.css
+++ b/css/main.css
@@ -168,7 +168,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .testimonial .content {
-  margin: 15px 0 px 170px;
+  margin: 15px 0px 0px 170px;
   position: relative;
 }
 
