--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,7 +89,7 @@
                 <a href="{{ site.base_url }}/impressum.html">Impressum/Contact</a>
               </li>
               <li>
-                <a href="{{ site.base_url }}/tos.html">Therms of service</a>
+                <a href="{{ site.base_url }}/tos.html">Terms of service</a>
               </li>
             </ul>
           </div>
