--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,8 @@
             <li><a href="{{ site.base_url }}/">About</a></li>
             <li><a href="http://schmiede.tumblr.com/" target="_BLANK">Blog</a></li>
             <li><a href="{{ site.base_url }}/location/">Location</a></li>
-            <li><a href="{{ site.base_url }}/medienkunstpreis/">Medienkunstpreis</a></li>
             <li><a href="http://schmiede.ca/apply/" class="btn btn-primary btn-lg yellow" style="font-weight: normal;">APPLY</a> </li> 
+            <li><a href="{{ site.base_url }}/medienkunstpreis/">LS Medienkunst</a></li>
           </ul>
         </div>
       </div>
