--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
             <li><a href="http://schmiede.tumblr.com/" target="_BLANK">Blog</a></li>
             <li><a href="{{ site.base_url }}/location/">Location</a></li>
             <li><a href="http://schmiede.ca/apply/" class="btn btn-primary btn-lg yellow" style="font-weight: normal;">APPLY</a> </li> 
-            <li><a href="{{ site.base_url }}/medienkunstpreis/">LS Medienkunst</a></li>
+            <li><a href="{{ site.base_url }}/medienkunstpreis/">Jahresstipendium Medienkunst Land Salzburg</a></li>
           </ul>
         </div>
       </div>
@@ -77,7 +77,7 @@
                 <a href="/apply/">Apply</a>
               </li>
               <li>
-                <a href="/medienkunstpreis/">Medienkunstpreis</a>
+               <!-- <a href="/medienkunstpreis/">Medienkunstpreis</a> -->
               </li>
             </ul>
           </div>
