--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
             <li><a href="{{ site.base_url }}/">About</a></li>
             <li><a href="http://schmiede.tumblr.com/" target="_BLANK">Blog</a></li>
             <li><a href="{{ site.base_url }}/location/">Location</a></li>
-            <li><a href="https://schmiede.tumblr.com/post/176554813597/ortung-in-hintersee-2018-2020" class="btn btn-primary btn-lg yellow" style="font-weight: normal;">ORTung</a> </li> 
+            <li><a href="https://schmiede.tumblr.com/tagged/ortung" class="btn btn-primary btn-lg yellow" style="font-weight: normal;">ORTung</a> </li> 
             <li><a href="http://schmiede.ca/apply/" class="btn btn-primary btn-lg yellow" style="font-weight: normal;">APPLY</a> </li> 
             <li><a href="{{ site.base_url }}/medienkunstpreis/">JS Medienkunst</a></li>
           </ul>
