--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
           <a href="{{ site.base_url }}/"><img class="logo" src="{{ site.base_url }}/images/logo.png" /></a>
           <ul class="nav navbar-nav">
             <li><a href="{{ site.base_url }}/">About</a></li>
-            <li><a href="http://schmiede.tumblr.com/" target="_BLANK">Blog</a></li>
+            <li><a href="http://schmiedehallein.com/blog/" target="_BLANK">Blog</a></li>
             <li><a href="{{ site.base_url }}/location/">Location</a></li>
             <li><a href="https://schmiede.tumblr.com/tagged/ortung" class="btn btn-primary btn-lg yellow" style="font-weight: normal;">ORTung</a> </li> 
             <li><a href="http://schmiede.ca/apply/" class="btn btn-primary btn-lg yellow" style="font-weight: normal;">APPLY</a> </li> 
